rust/macros/tests/invalid/target/debug/deps/only_comma_rs-ddaef108ab72db55.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/only_comma_rs-ddaef108ab72db55: only-comma.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/only_comma_rs-ddaef108ab72db55.d: only-comma.rs

only-comma.rs:
